<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ubicacion.LocationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleloc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location1"
            android:textSize="24sp" />

        <org.osmdroid.views.MapView
            android:id="@+id/openmapview"
            android:layout_width="match_parent"
            android:layout_height="509dp" />


        <TextView
            android:id="@+id/titleloc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loctation2"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtloc1"
                android:layout_width="248dp"
                android:layout_height="142dp"
                android:text="@string/ubic"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtloc2"
                android:layout_width="0dp"
                android:layout_height="142dp"
                android:layout_weight="1"
                android:text="@string/ubic"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>